Cellient MPL200 resets every 200s
This is a new problem with ModemManager 1.20 (1.20.0-1~ubuntu22.04.3) on Ubuntu 22.04.04. Downgrading ModemManager to version 1.18 (1.18.6-1) resolves the issue.
Cellient MPL200 modems with PIN unlocked seems to reset every 200s, it's the same messages that loop over and over:
ModemManager[]: <warn> Cannot read from istream: connection broken
ModemManager[]: <info> [modem4] connection to qmi-proxy for /dev/cdc-wdm0 lost, reprobing
ModemManager[]: <info> [base-manager] port cdc-wdm0 released by device '/sys/devices/pci0000:00/0000:00:16.0/usb1/1-1'
ModemManager[]: <info> [base-manager] port wwan0 released by device '/sys/devices/pci0000:00/0000:00:16.0/usb1/1-1'
...
ModemManager[]: <info> [device /sys/devices/pci0000:00/0000:00:16.0/usb1/1-1] creating modem with plugin 'generic' and '2' ports
ModemManager[]: <info> [base-manager] modem for device '/sys/devices/pci0000:00/0000:00:16.0/usb1/1-1' successfully created ModemManager[]: <warn> [modem5] couldn't query SIM slots: QMI protocol error (94): 'NotSupported' ModemManager[]: <info> [modem5] state changed (unknown -> locked)
ModemManager[]: <warn> [modem5/sim4] couldn't load IMSI: Couldn't get UIM IMSI: QMI protocol error (37): 'UimUninitialized'
ModemManager[]: <warn> [modem5/sim4] couldn't load operator identifier: Couldn't get home network: QMI protocol error (16): 'NotProvisioned' ModemManager[]: <warn> [modem5/sim4] couldn't load operator name: Couldn't get home network: QMI protocol error (16): 'NotProvisioned' ModemManager[]: <warn> [modem5/sim4] couldn't load list of emergency numbers: No AT port available to run command ModemManager[]: <warn> [modem5/sim4] couldn't load list of preferred networks: Couldn't get preferred networks: QMI protocol error (37): 'UimUninitialized' Mar 26 ModemManager[]: <warn> [modem5/sim4] couldn't load GID1: Couldn't read data from UIM: QMI protocol error (82): 'AccessDenied' ModemManager[]: <warn> [modem5/sim4] couldn't load GID2: Couldn't read data from UIM: QMI protocol error (82): 'AccessDenied' ModemManager[]: <warn> [modem5] couldn't load list of own numbers: Couldn't get MSISDN: QMI protocol error (37): 'UimUninitialized' ModemManager[]: <warn> [modem5] error initializing: Modem is currently locked, cannot fully initialize
ModemManager[]: <info> [modem5] state changed (locked -> initializing)
ModemManager[]: <warn> [modem5] couldn't query SIM slots: QMI protocol error (94): 'NotSupported'
odemManager[]: <warn> [modem5/sim4] couldn't load operator identifier: Couldn't get home network: QMI protocol error (16): 'NotProvisioned' Mar 26 ModemManager[]: <warn> [modem5/sim4] couldn't load operator name: Couldn't get home network: QMI protocol error (16): 'NotProvisioned' ModemManager[]: <warn> [modem5/sim4] couldn't load list of emergency numbers: No AT port available to run command ModemManager[]: <warn> [modem5] couldn't load list of own numbers: Couldn't get MSISDN: QMI protocol error (16): 'NotProvisioned' ModemManager[]: <warn> [modem5] couldn't load UE mode of operation for EPS: No AT port available to run command ModemManager[]: <info> [modem5] state changed (initializing -> disabled)
ModemManager[]: <info> [modem5] state changed (disabled -> enabling)
ModemManager[]: <info> [modem5] power state updated: on
ModemManager[]: <info> [modem5] state changed (enabling -> enabled)
ModemManager[]: <info> [modem5] 3GPP registration state changed (unknown -> registering)
ModemManager[]: <info> [modem5] simple connect started...
ModemManager[]: <info> [modem5] simple connect state (6/10): register
ModemManager[]: <info> [modem5] 3GPP registration state changed (registering -> xxxx)
ModemManager[]: <info> [modem5] state changed (enabled -> registered)
ModemManager[]: <info> [modem5] simple connect state (7/10): wait to get packet service state attached
ModemManager[]: <info> [modem5] simple connect state (8/10): bearer
ModemManager[]: <info> [modem5] simple connect state (9/10): connect
ModemManager[]: <info> [modem5] state changed (registered -> connecting)
ModemManager[]: <info> [modem5/bearer7] QMI IPv4 Settings:
ModemManager[]: <info> [modem5/bearer7] address: x.x.x.x/x
ModemManager[]: <info> [modem5/bearer7] gateway: x.x.x.x
ModemManager[]: <info> [modem5/bearer7] DNS #1: x.x.x.x
ModemManager[]: <info> [modem5/bearer7] DNS #2: x.x.x.x
ModemManager[]: <info> [modem5/bearer7] MTU: x
ModemManager[]: <error> mm_utils_bin2hexstr: assertion 'bin != NULL' failed
ModemManager[]: <info> [modem5/bearer7] reloading stats is supported by the device ModemManager[]: <info> [modem5] state changed (connecting -> connected)
ModemManager[]: <info> [modem5] simple connect state (10/10): all done
The modem always re-appears with a new modem number and the modem works all fine in-between the resets.
Edited by object Object